# broma2ida

./: CMakeLists.txt  README.md  genall.ps1
src/: main.cpp
